--- a/Bank_Microservices/configserver/src/main/resources/config/accounts.properties
+++ b/Bank_Microservices/configserver/src/main/resources/config/accounts.properties
@@ -1,11 +1,11 @@
-accounts.msg =Welcome to the EazyBank Accounts Dev application
-accounts.build-version=2
+accounts.msg =Welcome to the EazyBank Accounts Default application
+accounts.build-version=3
 
-accounts.mailDetails.hostName=dev-accounts@eazybytes.com
-accounts.mailDetails.port=9020
-accounts.mailDetails.from=dev-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Dev Environment
+accounts.mailDetails.hostName=default-accounts@eazybytes.com
+accounts.mailDetails.port=9000
+accounts.mailDetails.from=default-accounts@eazybytes.com
+accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
 
-accounts.activeBranches[0]=Chennai
-accounts.activeBranches[1]=Berlin
-accounts.activeBranches[2]=Indianapollis
+accounts.activeBranches[0]=Mumbai
+accounts.activeBranches[1]=London
+accounts.activeBranches[2]=Washington
