--- a/Bank_Microservices/configserver/src/main/resources/config/cards-dev.properties
+++ b/Bank_Microservices/configserver/src/main/resources/config/cards-dev.properties
@@ -1,11 +1,11 @@
-accounts.msg =Welcome to the EazyBank Accounts Default application
-accounts.build-version=3
+cards.msg =Welcome to the EazyBank Cards Dev application
+cards.build-version=2
 
-accounts.mailDetails.hostName=default-accounts@eazybytes.com
-accounts.mailDetails.port=9000
-accounts.mailDetails.from=default-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
+cards.mailDetails.hostName=dev-cards@eazybytes.com
+cards.mailDetails.port=9022
+cards.mailDetails.from=dev-cards@eazybytes.com
+cards.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
 
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=London
-accounts.activeBranches[2]=Washington
+cards.activeBranches[0]=Chennai
+cards.activeBranches[1]=Berlin
+cards.activeBranches[2]=Indianapollis
