--- a/Bank_Microservices/configserver/src/main/resources/config/cards-prod.properties
+++ b/Bank_Microservices/configserver/src/main/resources/config/cards-prod.properties
@@ -1,11 +1,11 @@
-cards.msg =Welcome to the EazyBank Cards Dev application
-cards.build-version=2
+cards.msg =Welcome to the EazyBank Cards Prod application
+cards.build-version=1
 
-cards.mailDetails.hostName=dev-cards@eazybytes.com
-cards.mailDetails.port=9022
-cards.mailDetails.from=dev-cards@eazybytes.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
+cards.mailDetails.hostName=prod-cards@eazybytes.com
+cards.mailDetails.port=9012
+cards.mailDetails.from=prod-cards@eazybytes.com
+cards.mailDetails.subject=Your Card Details from Eazy Bank Production Environment
 
-cards.activeBranches[0]=Chennai
-cards.activeBranches[1]=Berlin
-cards.activeBranches[2]=Indianapollis
+cards.activeBranches[0]=Hyderabad
+cards.activeBranches[1]=Paris
+cards.activeBranches[2]=NewYork
