--- a/Bank_Microservices/configserver/src/main/resources/config/cards.properties
+++ b/Bank_Microservices/configserver/src/main/resources/config/cards.properties
@@ -1,11 +1,11 @@
-cards.msg =Welcome to the EazyBank Cards Prod application
-cards.build-version=1
+cards.msg =Welcome to the EazyBank Cards Default application
+cards.build-version=3
 
-cards.mailDetails.hostName=prod-cards@eazybytes.com
-cards.mailDetails.port=9012
-cards.mailDetails.from=prod-cards@eazybytes.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Production Environment
+cards.mailDetails.hostName=default-cards@eazybytes.com
+cards.mailDetails.port=9002
+cards.mailDetails.from=default-cards@eazybytes.com
+cards.mailDetails.subject=Your Card Details from Eazy Bank Default Environment
 
-cards.activeBranches[0]=Hyderabad
-cards.activeBranches[1]=Paris
-cards.activeBranches[2]=NewYork
+cards.activeBranches[0]=Mumbai
+cards.activeBranches[1]=London
+cards.activeBranches[2]=Washington
