--- a/Bank_Microservices/configserver/src/main/resources/config/loans-dev.properties
+++ b/Bank_Microservices/configserver/src/main/resources/config/loans-dev.properties
@@ -1,11 +1,11 @@
-cards.msg =Welcome to the EazyBank Cards Prod application
-cards.build-version=1
+loans.msg =Welcome to the EazyBank Loans Dev application
+loans.build-version=2
 
-cards.mailDetails.hostName=prod-cards@eazybytes.com
-cards.mailDetails.port=9012
-cards.mailDetails.from=prod-cards@eazybytes.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Production Environment
+loans.mailDetails.hostName=dev-loans@eazybytes.com
+loans.mailDetails.port=9021
+loans.mailDetails.from=dev-loans@eazybytes.com
+loans.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
 
-cards.activeBranches[0]=Hyderabad
-cards.activeBranches[1]=Paris
-cards.activeBranches[2]=NewYork
+loans.activeBranches[0]=Chennai
+loans.activeBranches[1]=Berlin
+loans.activeBranches[2]=Indianapollis
