--- a/Bank_Microservices/configserver/src/main/resources/config/loans-prod.properties
+++ b/Bank_Microservices/configserver/src/main/resources/config/loans-prod.properties
@@ -1,11 +1,11 @@
-loans.msg =Welcome to the EazyBank Loans Dev application
-loans.build-version=2
+loans.msg =Welcome to the EazyBank Loans Prod application
+loans.build-version=1
 
-loans.mailDetails.hostName=dev-loans@eazybytes.com
-loans.mailDetails.port=9021
-loans.mailDetails.from=dev-loans@eazybytes.com
-loans.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
+loans.mailDetails.hostName=prod-loans@eazybytes.com
+loans.mailDetails.port=9011
+loans.mailDetails.from=prod-loans@eazybytes.com
+loans.mailDetails.subject=Your Loan Details from Eazy Bank Production Environment
 
-loans.activeBranches[0]=Chennai
-loans.activeBranches[1]=Berlin
-loans.activeBranches[2]=Indianapollis
+loans.activeBranches[0]=Hyderabad
+loans.activeBranches[1]=Paris
+loans.activeBranches[2]=NewYork
