--- a/Bank_Microservices/configserver/src/main/resources/config/loans.properties
+++ b/Bank_Microservices/configserver/src/main/resources/config/loans.properties
@@ -1,11 +1,11 @@
-loans.msg =Welcome to the EazyBank Loans Prod application
-loans.build-version=1
+loans.msg =Welcome to the EazyBank Loans Default application
+loans.build-version=3
 
-loans.mailDetails.hostName=prod-loans@eazybytes.com
-loans.mailDetails.port=9011
-loans.mailDetails.from=prod-loans@eazybytes.com
-loans.mailDetails.subject=Your Loan Details from Eazy Bank Production Environment
+loans.mailDetails.hostName=default-loans@eazybytes.com
+loans.mailDetails.port=9001
+loans.mailDetails.from=default-loans@eazybytes.com
+loans.mailDetails.subject=Your Loan Details from Eazy Bank Default Environment
 
-loans.activeBranches[0]=Hyderabad
-loans.activeBranches[1]=Paris
-loans.activeBranches[2]=NewYork
+loans.activeBranches[0]=Mumbai
+loans.activeBranches[1]=London
+loans.activeBranches[2]=Washington
