--- a/Bank_Microservices/configserver/src/main/resources/application.properties
+++ b/Bank_Microservices/configserver/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.profiles.active=git
 
 #spring.cloud.config.server.native.search-locations=classpath:/config
 #spring.cloud.config.server.native.search-locations=file:///C://config
-spring.cloud.config.server.git.uri=https://github.com/JosefNafaa/microservices_with_docker/tree/master/microservices-config
+spring.cloud.config.server.git.uri=https://github.com/JosefNafaa/microservices-config
 spring.cloud.config.server.git.clone-on-start=true
-spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.default-label=master
 
 server.port=8071
